deployments/app-land/resources/1password-connect-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "1password-connect"
spec:
  finalizers:
    - "kubernetes"
