deployments/app-land/resources/gafaelfawr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gafaelfawr
spec:
  finalizers:
    - kubernetes
