deployments/app-land/resources/lsst-the-docs-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lsst-the-docs
spec:
  finalizers:
    - kubernetes
