deployments/app-land/resources/onepassword-connect-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "onepassword-connect"
spec:
  finalizers:
    - "kubernetes"
