deployments/app-land/resources/rubintv-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rubintv-dev
  labels:
    app: rubintv-dev
spec:
  finalizers:
    - kubernetes
