deployments/app-land/resources/sqrbot.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sqrbot
spec:
  finalizers:
    - kubernetes
